--- a/FCI/ui/fci_08_reports_submenu.ui
+++ b/FCI/ui/fci_08_reports_submenu.ui
@@ -64,7 +64,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>22</pointsize>
        <weight>50</weight>
        <bold>false</bold>
@@ -162,7 +162,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>22</pointsize>
        <weight>50</weight>
        <bold>false</bold>
@@ -183,7 +183,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>22</pointsize>
        <weight>50</weight>
        <bold>false</bold>
