--- a/FCI/ui/fci_15_admin_su.ui
+++ b/FCI/ui/fci_15_admin_su.ui
@@ -151,7 +151,7 @@
        <rect>
         <x>110</x>
         <y>80</y>
-        <width>171</width>
+        <width>221</width>
         <height>61</height>
        </rect>
       </property>
@@ -164,7 +164,7 @@
        <rect>
         <x>460</x>
         <y>190</y>
-        <width>171</width>
+        <width>221</width>
         <height>61</height>
        </rect>
       </property>
@@ -188,9 +188,9 @@
      <widget class="QPushButton" name="pushButton_14">
       <property name="geometry">
        <rect>
-        <x>460</x>
+        <x>450</x>
         <y>80</y>
-        <width>171</width>
+        <width>231</width>
         <height>61</height>
        </rect>
       </property>
@@ -216,7 +216,7 @@
        <rect>
         <x>110</x>
         <y>190</y>
-        <width>171</width>
+        <width>221</width>
         <height>61</height>
        </rect>
       </property>
@@ -229,12 +229,38 @@
        <rect>
         <x>110</x>
         <y>310</y>
-        <width>171</width>
+        <width>221</width>
         <height>61</height>
        </rect>
       </property>
       <property name="text">
        <string>API Config</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_18">
+      <property name="geometry">
+       <rect>
+        <x>460</x>
+        <y>310</y>
+        <width>221</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>DAT Config</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_19">
+      <property name="geometry">
+       <rect>
+        <x>790</x>
+        <y>300</y>
+        <width>281</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Register</string>
       </property>
      </widget>
     </widget>
@@ -263,8 +289,8 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>1060</x>
-       <y>20</y>
+       <x>1080</x>
+       <y>0</y>
        <width>221</width>
        <height>31</height>
       </rect>
