--- a/FCI/ui/fci_02_Batches.ui
+++ b/FCI/ui/fci_02_Batches.ui
@@ -1356,6 +1356,24 @@
       <string>240</string>
      </property>
     </widget>
+    <widget class="QPushButton" name="pushButton_9">
+     <property name="geometry">
+      <rect>
+       <x>1210</x>
+       <y>650</y>
+       <width>91</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Return</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
