--- a/FCI/ui/fci_05_Issues.ui
+++ b/FCI/ui/fci_05_Issues.ui
@@ -445,7 +445,7 @@
     <widget class="QLineEdit" name="lineEdit_7">
      <property name="geometry">
       <rect>
-       <x>1060</x>
+       <x>990</x>
        <y>70</y>
        <width>101</width>
        <height>31</height>
@@ -463,7 +463,7 @@
     <widget class="QPushButton" name="pushButton_6">
      <property name="geometry">
       <rect>
-       <x>1170</x>
+       <x>1100</x>
        <y>70</y>
        <width>91</width>
        <height>31</height>
@@ -481,7 +481,7 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>970</x>
+       <x>900</x>
        <y>70</y>
        <width>81</width>
        <height>31</height>
@@ -1204,6 +1204,24 @@
        <string>Contractor 1001</string>
       </property>
      </item>
+    </widget>
+    <widget class="QPushButton" name="pushButton_13">
+     <property name="geometry">
+      <rect>
+       <x>1200</x>
+       <y>70</y>
+       <width>91</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Return</string>
+     </property>
     </widget>
    </widget>
   </widget>
