--- a/FCI/ui/fci_02_Batches.ui
+++ b/FCI/ui/fci_02_Batches.ui
@@ -23,7 +23,7 @@
    <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>20</x>
       <y>20</y>
       <width>1311</width>
       <height>701</height>
@@ -39,8 +39,8 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>10</y>
-       <width>231</width>
+       <y>30</y>
+       <width>251</width>
        <height>51</height>
       </rect>
      </property>
@@ -62,18 +62,18 @@
     <widget class="QLabel" name="label_20">
      <property name="geometry">
       <rect>
-       <x>1140</x>
+       <x>1120</x>
        <y>10</y>
-       <width>161</width>
+       <width>181</width>
        <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
+       <weight>50</weight>
+       <bold>false</bold>
        <underline>false</underline>
       </font>
      </property>
@@ -81,17 +81,17 @@
       <string notr="true">color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
-      <string>05 Aug 2020 12:45 </string>
+      <string>05 Aug 2020 12:45:00</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="pushButton_2">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>80</y>
+       <x>700</x>
+       <y>650</y>
        <width>91</width>
        <height>31</height>
       </rect>
@@ -105,29 +105,11 @@
       <string>Add</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_2">
-     <property name="geometry">
-      <rect>
-       <x>170</x>
-       <y>80</y>
-       <width>91</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Edit</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="pushButton_3">
      <property name="geometry">
       <rect>
-       <x>300</x>
-       <y>80</y>
+       <x>830</x>
+       <y>650</y>
        <width>91</width>
        <height>31</height>
       </rect>
@@ -138,16 +120,16 @@
       </font>
      </property>
      <property name="text">
-      <string>Delete</string>
+      <string>Save</string>
      </property>
     </widget>
     <widget class="QTableWidget" name="tableWidget">
      <property name="geometry">
       <rect>
        <x>30</x>
-       <y>140</y>
+       <y>120</y>
        <width>581</width>
-       <height>511</height>
+       <height>501</height>
       </rect>
      </property>
      <row>
@@ -369,10 +351,10 @@
     <widget class="QLabel" name="label_21">
      <property name="geometry">
       <rect>
-       <x>500</x>
-       <y>40</y>
+       <x>480</x>
+       <y>30</y>
        <width>331</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -454,7 +436,7 @@
      <property name="geometry">
       <rect>
        <x>690</x>
-       <y>450</y>
+       <y>460</y>
        <width>161</width>
        <height>31</height>
       </rect>
@@ -482,7 +464,7 @@
      <property name="geometry">
       <rect>
        <x>690</x>
-       <y>500</y>
+       <y>520</y>
        <width>141</width>
        <height>31</height>
       </rect>
@@ -510,8 +492,8 @@
      <property name="geometry">
       <rect>
        <x>690</x>
-       <y>560</y>
-       <width>181</width>
+       <y>580</y>
+       <width>161</width>
        <height>31</height>
       </rect>
      </property>
@@ -552,29 +534,11 @@
       <string>60000</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_2">
-     <property name="geometry">
-      <rect>
-       <x>880</x>
-       <y>450</y>
-       <width>101</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Wheat - 12</string>
-     </property>
-    </widget>
     <widget class="QLineEdit" name="lineEdit_3">
      <property name="geometry">
       <rect>
        <x>880</x>
-       <y>500</y>
+       <y>520</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -591,9 +555,9 @@
     <widget class="QComboBox" name="comboBox">
      <property name="geometry">
       <rect>
-       <x>870</x>
-       <y>560</y>
-       <width>211</width>
+       <x>880</x>
+       <y>580</y>
+       <width>201</width>
        <height>31</height>
       </rect>
      </property>
@@ -621,7 +585,7 @@
     <widget class="QPushButton" name="pushButton_4">
      <property name="geometry">
       <rect>
-       <x>690</x>
+       <x>960</x>
        <y>650</y>
        <width>91</width>
        <height>31</height>
@@ -633,13 +597,13 @@
       </font>
      </property>
      <property name="text">
-      <string>Save</string>
+      <string>Delete</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>830</x>
+       <x>1090</x>
        <y>650</y>
        <width>91</width>
        <height>31</height>
@@ -696,11 +660,12 @@
        <x>970</x>
        <y>70</y>
        <width>81</width>
-       <height>41</height>
+       <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
+       <family>MS Sans Serif</family>
        <pointsize>10</pointsize>
       </font>
      </property>
@@ -837,7 +802,7 @@
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>1190</x>
+       <x>1140</x>
        <y>400</y>
        <width>91</width>
        <height>31</height>
@@ -861,9 +826,9 @@
     <widget class="QPushButton" name="pushButton_7">
      <property name="geometry">
       <rect>
-       <x>960</x>
+       <x>30</x>
        <y>650</y>
-       <width>231</width>
+       <width>191</width>
        <height>31</height>
       </rect>
      </property>
@@ -1237,8 +1202,8 @@
     <widget class="QLabel" name="label_37">
      <property name="geometry">
       <rect>
-       <x>1020</x>
-       <y>450</y>
+       <x>1100</x>
+       <y>580</y>
        <width>71</width>
        <height>31</height>
       </rect>
@@ -1266,8 +1231,8 @@
      <property name="geometry">
       <rect>
        <x>1190</x>
-       <y>450</y>
-       <width>91</width>
+       <y>580</y>
+       <width>101</width>
        <height>31</height>
       </rect>
      </property>
@@ -1289,8 +1254,8 @@
     <widget class="QLabel" name="label_38">
      <property name="geometry">
       <rect>
-       <x>1020</x>
-       <y>500</y>
+       <x>1040</x>
+       <y>520</y>
        <width>131</width>
        <height>31</height>
       </rect>
@@ -1318,7 +1283,7 @@
      <property name="geometry">
       <rect>
        <x>1190</x>
-       <y>500</y>
+       <y>520</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -1353,8 +1318,8 @@
     <widget class="QCalendarWidget" name="calendarWidget">
      <property name="geometry">
       <rect>
-       <x>980</x>
-       <y>200</y>
+       <x>940</x>
+       <y>220</y>
        <width>312</width>
        <height>183</height>
       </rect>
@@ -1380,6 +1345,36 @@
      <property name="text">
       <string>B_20200812_01</string>
      </property>
+    </widget>
+    <widget class="QComboBox" name="comboBox_2">
+     <property name="geometry">
+      <rect>
+       <x>880</x>
+       <y>460</y>
+       <width>191</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <item>
+      <property name="text">
+       <string>Contractor -01</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Contractor-02</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Contractor-03</string>
+      </property>
+     </item>
     </widget>
    </widget>
   </widget>
